--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,3 +55,24 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: ${{ steps.coverage.outputs.report }}
+
+  archive-build-artifacts:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+      - name: Clean
+        uses: actions-rs/cargo@v1
+        with:
+          command: clean
+      - name: Build
+        run: cargo build --release
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          path: target/release/capsule
