--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -23,6 +23,10 @@ jobs:
           command: clean
       - name: Build
         run: cargo build --release
+      - name: Zip
+        uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r capsule-macos.zip target/release/capsule
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -32,7 +36,7 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
-          prerelease: true
+          prerelease: false
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
