--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Zip
         uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r capsule-macos.zip target/release/capsule
+          args: zip -qq capsule-macos.zip target/release/capsule
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -35,8 +35,8 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+          draft: true
+          prerelease: true
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
