--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./capsule-macos.zip
+          asset_path: target/release/capsule-macos.zip
           asset_name: capsule-macos.zip
           asset_content_type: application/zip
