chore: remote zip from ci.

--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -23,11 +23,6 @@ jobs:
           command: clean
       - name: Build
         run: cargo build --release
-      - name: Install zip
-        uses: montudor/action-zip@v1
-      - name: Zip output
-        run: zip -qq -r capsule-macos.zip capsule
-        working-directory: target/release/
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -45,6 +40,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/release/capsule-macos.zip
-          asset_name: capsule-macos.zip
-          asset_content_type: application/zip
+          asset_path: target/release/capsule
+          asset_name: capsule
