--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -8,7 +8,7 @@ name: RELEASE
 jobs:
   build:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,6 +23,14 @@ jobs:
           command: clean
       - name: Build
         run: cargo build --release
+      - uses: olegtarasov/get-tag@v2.1
+        id: tagName
+        with:
+          tagRegexGroup: 1
+      - name: Package assert
+        run: |
+          cd target/release/
+          tar -czvf capsule-cli-macos-${{ steps.tagName.outputs.tag }}.tar.gz capsule
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -40,5 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/release/capsule
-          asset_name: capsule
+          asset_path: target/release/capsule-cli-macos-${{ steps.tagName.outputs.tag }}.tar.gz
+          asset_name: capsule-cli-macos-${{ steps.tagName.outputs.tag }}.tar.gz
+          asset_content_type: application/x-tar
