--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -7,8 +7,10 @@ name: RELEASE
 
 jobs:
   build:
-    name: Release
-    runs-on: macos-latest
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -30,7 +32,7 @@ jobs:
       - name: Package assert
         run: |
           cd target/release/
-          tar -czvf capsule-cli-macos-${{ steps.tagName.outputs.tag }}.tar.gz capsule
+          tar -czvf capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz capsule
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -48,6 +50,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/release/capsule-cli-macos-${{ steps.tagName.outputs.tag }}.tar.gz
-          asset_name: capsule-cli-macos-${{ steps.tagName.outputs.tag }}.tar.gz
+          asset_path: target/release/capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz
+          asset_name: capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz
           asset_content_type: application/x-tar
