--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,13 @@ jobs:
           tagRegexGroup: 1
       - name: Package assert
         run: |
-          ls target/release/
           cd target/release/
           tar -czvf capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz capsule
+      - name: Package windows assert
+        if: matrix.os == 'windows-latest'
+        run: |
+          cd target/release/
+          tar -czvf capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz capsule.exe
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
