--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           tagRegexGroup: 1
       - name: Package assert
+        if: matrix.os != 'windows-latest'
         run: |
           cd target/release/
           tar -czvf capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz capsule
