--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: ${{ github.ref }}
           draft: true
           prerelease: true
       - name: Upload to release
@@ -56,14 +56,3 @@ jobs:
           file: target/release/capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz
           asset_name: capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz
           tag: ${{ github.ref }}
-
-#      - name: Upload Release Asset
-#        id: upload-release-asset
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: target/release/capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz
-#          asset_name: capsule-cli-${{ matrix.os }}-${{ steps.tagName.outputs.tag }}.tar.gz
-#          asset_content_type: application/x-tar
